--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <div id="site_banner" class="col-sm-12">
-    <img class=img-responsive" style="width: 100%" src="/assets/images/home_1.png" alt=""/>
+    <img class=img-responsive" style="width: 100%" src="{{ '/assets/images/home_1.png' | absolute_url }}" alt=""/>
 </div>  <!-- chiudo il banner -->
 <!--
 <div id="site_content">
